kustomize/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-opentelemetry
spec:
  selector:
    app: nodejs-opentelemetry
  ports:
  - port: 8080
    targetPort: 8080
