kustomize/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-opentelemetry
  labels:
    name: nodejs-opentelemetry
spec:
  rules:
  - host: nodejs-opentelemetry.kubernetes.white-noise.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-opentelemetry
            port: 
              number: 8080
